# Base64-Credentials

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  credentials-manager.1  credentials_manager.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_credentials_manager.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
