[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "base64-credentials"
version = "0.4.0"
description = "Gestionnaire de credentials Base64"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    { name = "valorisa" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/valorisa/Base64-Credentials"
Issues = "https://github.com/valorisa/Base64-Credentials/issues"

[project.scripts]
credentials-manager = "credentials_manager:main"
